[project]
name = "crt-nodes"
description = "CRT-Nodes is a collection of custom nodes for ComfyUI"
version = "2.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/plugcrypt/CRT-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool]
[tool.comfy]
PublisherId = "crt"
DisplayName = "CRT-Nodes"
Icon = ""
