[project]
name = "crt-nodes"
description = "CRT-Nodes is a collection of custom nodes for ComfyUI"
version = "2.4.2"
license = {file = "LICENSE"}
dependencies = [
    "opencv-contrib-python",
    "scipy",
    "ultralytics",
    "color-matcher",
    "spandrel",
    "pedalboard",
    "wordcloud",
    "librosa",
    "imageio-ffmpeg",
    "soundfile",
    "huggingface_hub",
    "einops",
    "rotary-embedding-torch",
    "omnivoice>=0.1.0",
]

[project.urls]
Repository = "https://github.com/PGCRT/CRT-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool]
[tool.comfy]
PublisherId = "crt"
DisplayName = "CRT-Nodes"
Icon = ""
